CWL Documentation Overhaul.
- Rename "Dependencies and Docker" tutorial to "Dependencies and Containers" for Galaxy tools (singularity and such has come a long way).
- Update everything for CWL 1.0 and the latest Planemo release.
- Add tutorial for "Dependencies and Conda" for CWL that mirrors the Galaxy version of this document.
- Add tutorial for "Dependencies and Containers" for CWL that mirrors the Galaxy version of this document.
- Add seqtk_complete_cwl project template for above tutorials to mirror the Galaxy versions.
- Add conda_testing_cwl, conda_answers_cwl, and conda_testing_cwl project templates for above tutorials that mirror the Galaxy versions.
- Re-do README to link to the above tutorials and feature CWL more prominently.
- Small updates to Galaxy variants of these documents.
- Improvements and expansions to documentation testing scripts.

--- a/docs/writing/seqtk_seq_v3_tests.yml
+++ b/docs/writing/seqtk_seq_v3_tests.yml
@@ -3,7 +3,7 @@
   job:
     input1:
       class: File
-      value: test-data/2.fastq
+      path: test-data/2.fastq
   outputs:
     output1:
       path: test-data/2.fasta
