Fixes for CWL project templates.

--- a/project_templates/conda_answers_cwl/exercise_3/seqtk_seq_tests.yml
+++ b/project_templates/conda_answers_cwl/exercise_3/seqtk_seq_tests.yml
@@ -1,6 +1,6 @@
 
 - doc: test generated from example command
-  job: seqtk_seq_job.json
+  job: seqtk_seq_job.yml
   outputs:
     output1:
       path: test-data/2.fasta
